--- a/NewsWebsiteReact/src/website.css
+++ b/NewsWebsiteReact/src/website.css
@@ -14,6 +14,7 @@
   --main-navbar-color: rgb(0, 0, 0);
   --main-links-navbar-hover-color: #afafef;
   --trending-articles: #404052;
+  --profile: #3c3c4b;
   --register: #404052;
   --text-color: #ffffff;
   --search-input: #afafef;
@@ -26,11 +27,15 @@
   --under-category-title: rgb(255, 255, 255);
   --nav-links-after: #afafef;
   --comment-color: #a8a8bc;
+  --font-family: Oswald, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
   --comment-div-color: black;
   --comment-form-heading: white;
   --comment-form-div: #222233;
   --comment-form-input: #afafef;
   --comment-form-input-focus: #afafef61;
+  --select: #3e3e52;
   --form-for-comment: #3e3e52;
   --background-image-commentForm: linear-gradient(to right, #404052, #222233);
   --background-image-commentForm-before: url("./logolight.png");
@@ -58,6 +63,10 @@
   --trending-articles: #2b5e84;
   --register: #2b5e84;
   --text-color: #000000;
+  --font-family: Oswald, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
+  --profile: #719cbc;
   --image-filter: brightness(0.8);
   --search-input: #57a0d3;
   --search-input-focus: #094067;
@@ -73,6 +82,7 @@
   --comment-form-div: #2b5e84;
   --comment-form-input: #99cdf1;
   --comment-form-input-focus: #99ccf15f;
+  --select: #54b6fc;
   --form-for-comment: #094067;
   --background-image-commentForm: linear-gradient(to right, #2b5e84, #5f8bab);
 }
@@ -183,7 +193,7 @@ img {
   cursor: pointer;
   transition: 0.3s;
 }
-.WelcomeMessage{
+.WelcomeMessage {
   font-family: "Oswald";
   color: var(--text-color);
   font-weight: 100;
@@ -363,6 +373,182 @@ div {
   margin: 0;
   width: fit-content;
   height: fit-content;
+}
+.Profile {
+  border-radius: 20px;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.6);
+  padding: 20px;
+  margin: 0;
+  width: fit-content;
+  height: fit-content;
+  background-color: var(--profile);
+}
+.select {
+  background-color: var(--select);
+  padding: 10px;
+  border-radius: 10px;
+  border: solid white 0.1px;
+  width: 200px;
+}
+.test {
+  background-color: rgb(0, 0, 0);
+  border: none;
+  border-radius: 8px;
+  color: white;
+  padding: 15px;
+  margin: 10px;
+  position: relative;
+}
+.LightButton {
+  background-color: rgb(255, 255, 255);
+  /* box-shadow: 5px 4px 1px 0px black; */
+  border-radius: 6px;
+  border: 2px solid black;
+  padding: 8px;
+  margin: 10px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.SaveButton {
+  background-color: rgb(255, 255, 255);
+  border: solid 2px black;
+  padding: 16px;
+  font-family: var(--font-family);
+  width: 150px;
+  height: 60px;
+}
+/* CSS */
+.testagain {
+  appearance: button;
+  background-color: #000;
+  background-image: none;
+  border: 1px solid #000;
+  border-radius: 4px;
+  box-shadow: #fff 4px 4px 0 0, #000 4px 4px 0 1px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Oswald, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 20px;
+  margin: 0 5px 10px 0;
+  overflow: visible;
+  padding: 8px;
+  text-align: center;
+  text-transform: none;
+  touch-action: manipulation;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+/* CSS */
+.resetpasswordbutton {
+  background-color: #ffffff;
+  border: 1px solid rgb(209, 213, 219);
+  border-radius: 0.5rem;
+  box-sizing: border-box;
+  color: #111827;
+  font-family: Oswald, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.25rem;
+  text-align: center;
+  margin-left: 10px;
+  text-decoration: none #d1d5db solid;
+  text-decoration-thickness: auto;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.resetpasswordbutton:hover {
+  background-color: rgb(249, 250, 251);
+}
+
+.resetpasswordbutton:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.resetpasswordbutton:focus-visible {
+  box-shadow: none;
+}
+/* CSS */
+.SubscribeButton {
+  appearance: none;
+  background-color: white;
+  border: 2px solid #1a1a1a;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #000000;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Oswald, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
+  margin: 0;
+  min-height: 50px;
+  min-width: 0;
+  outline: none;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  user-select: none;
+  margin-left: 10px;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+  will-change: transform;
+}
+
+.SubscribeButton:disabled {
+  pointer-events: none;
+}
+
+.SubscribeButton:hover {
+  color: #fff;
+  background-color: #1a1a1a;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.SubscribeButton:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+/* .SaveButton:hover {
+} */
+/* .SaveButton::after { */
+/* content: ""; */
+/* position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 0, 0, 0.1); /* Light red overlay */
+/* opacity: 0; Hide by default */
+/* transition: opacity 0.3s ease; */
+/* z-index: 1; */
+/* } */
+/* .SaveButton:hover::after {
+  opacity: 1;
+} */
+.RegisterInput:focus {
+  background-color: var(--register-input-focus);
+  transition: 0.2s;
 }
 .RegisterInput {
   background-color: var(--register-input);
